# treasuredata_fdw

./: .gitignore  .travis.yml  META.json  Makefile  README.md  bridge.c  bridge.h  create_pgxn_package.sh  deparse.c  option.c  query.c  setup_regress  shippable.c  test_bridge.c  test_bridge_import.c  treasuredata_fdw--1.1.sql  treasuredata_fdw.c  treasuredata_fdw.control  treasuredata_fdw.h
.github/workflows/: main.yml
bridge_td_client_rust/: Cargo.toml
bridge_td_client_rust/src/: lib.rs
docker/: Dockerfile  build.sh  run.sh
expected/: treasuredata_fdw.out.erb
sql/: treasuredata_fdw.sql.erb
