[package]
name = "bridge_td_client"
version = "0.1.0"
authors = ["Mitsunori Komatsu <komamitsu@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
hyper = '0.9'
libc = '0.1'
retry = '0.4'
time = '0.1'
uuid = { version = "0.4", features = ["v4"] }
# td-client = '0.6'
td-client = { git = 'https://github.com/komamitsu/td-client-rust.git', branch = 'each_row_in_job_result_from_file' }
