[package]
name = "bridge_td_client"
version = "0.1.0"
authors = ["Mitsunori Komatsu <komamitsu@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
reqwest = '0.9'
libc = '0.1'
retry = '0.4'
time = '0.1'
uuid = { version = "0.4", features = ["v4"] }
serde = "1.0"
serde_json = "1.0"
td-client = '0.8'
